grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $.class_definition,
      $.struct_definition,
      $.enum_definition,
      $.const_definition,
      $.include_directive,
      $.version_directive,
      $.function_definition,
      alias($._global_declaration, $.declaration),
    ),

    // =========================================================================
    // Include and Version directives
    // =========================================================================

    class_definition: $ => prec(1, seq(
      optional($.class_modifier),
      keyword('class'),
      field('name', $._type_identifier),
      optional($.inheritance_specifier),
      optional($.class_flags),
      '{',
      repeat($._class_body_item),
      '}',
    )),

    inheritance_specifier: $ => seq(
      ':',
      field('parent', $._dottable_type_identifier),
    ),

    class_flags: $ => repeat1($.class_flag),

    class_flag: $ => choice(
      keyword('abstract'),
      keyword('final'),
      keyword('native'),
      keyword('ui'),
      keyword('play'),
      seq(keyword('replaces'), $._dottable_type_identifier),
      seq(keyword('sealed'), '(', commaSep1($.identifier), ')'),
      $._version_modifier,
      $._deprecated_modifier,
    ),

    // =========================================================================
    // Struct definition
    // =========================================================================

    struct_definition: $ => seq(
      optional(keyword('extend')),
      keyword('struct'),
      field('name', $._type_identifier),
      optional($.struct_flags),
      '{',
      repeat($._struct_body_item),
      '}',
      optional(';'),
    ),

    _struct_body_item: $ => choice(
      $.method_definition,
      $.field_declaration,
      $.const_definition,
      $.enum_definition,
    ),

    // =========================================================================
    // Enum definition
    // =========================================================================

    enum_definition: $ => seq(
      keyword('enum'),
      field('name', $._type_identifier),
      optional($.enum_base_type),
      '{',
      optional($.enumerator_list),
      '}',
      optional(';'),
    ),

    enumerator_list: $ => seq(
      $.enumerator,
      repeat(seq(',', $.enumerator)),
      optional(','),
    ),

    enumerator: $ => seq(
      field('name', $.identifier),
      optional(seq('=', field('value', $.expression))),
    ),

    // =========================================================================
    // Const definition
    // =========================================================================

    _class_body_item: $ => choice(
      $.method_definition,
      $.field_declaration,
      $.default_block,
      $.states_block,
      $.property_definition,
      $.flag_definition,
      $.const_definition,
      $.enum_definition,
      $.mixin_statement,
      $.static_const_array,
    ),

    // =========================================================================
    // Field declaration
    // =========================================================================

    field_declaration: $ => seq(
      optional($.member_modifiers),
      typedDeclaratorList($.type_specifier, $._variable_declarator),
    ),

    member_modifiers: $ => prec.left(repeat1($.member_modifier)),

    member_modifier: $ => choice(
      keyword('abstract'),
      keyword('native'),
      keyword('static'),
      keyword('private'),
      keyword('protected'),
      keyword('latent'),
      keyword('final'),
      keyword('meta'),
      keyword('transient'),
      keyword('norollback'),
      keyword('readonly'),
      keyword('internal'),
      keyword('virtual'),
      keyword('override'),
      keyword('vararg'),
      keyword('ui'),
      keyword('play'),
      keyword('clearscope'),
      $._unsafe_clearscope_modifier,
      keyword('virtualscope'),
      seq(keyword('action'), optional($.states_options)),
      $._version_modifier,
      $._deprecated_modifier,
    ),

    _deprecated_modifier: $ => seq(
      keyword('deprecated'),
      '(',
      $.string_literal,
      optional(seq(',', $.string_literal)),
      ')',
    ),

    _version_modifier: $ => seq(
      keyword('version'),
      '(',
      $.string_literal,
      ')',
    ),

    _unsafe_clearscope_modifier: _ => unsafeModifier('clearscope'),

    _return_type: $ => choice(
      $.type_specifier,
      $.multi_return_type,
    ),

    _variable_declarator: $ => choice(
      $.array_declarator,
      $.init_declarator,
      $.identifier,
    ),

    // =========================================================================
    // Method definition
    // =========================================================================

    method_definition: $ => seq(
      optional($.member_modifiers),
      field('type', $._return_type),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional($.const_qualifier),
      choice(
        field('body', $.compound_statement),
        ';',
      ),
    ),

    const_qualifier: _ => choice(
      keyword('const'),
      unsafeModifier('const'),
    ),

    property_definition: $ => seq(
      keyword('property'),
      field('name', $.identifier),
      ':',
      commaSep1(field('field', $.identifier)),
      ';',
    ),

    default_block: $ => seq(
      $._default_keyword,
      '{',
      repeat($.default_property),
      '}',
    ),

    default_property: $ => choice(
      $.property_assignment,
      $.flag_statement,
      $.empty_default_statement,
    ),

    property_assignment: $ => seq(
      field('property', $.property_identifier),
      optional(field('value', commaSep1($.expression))),
      ';',
    ),

    property_identifier: $ => twoSegmentDottableName($),

    states_block: $ => seq(
      keywordWithPrecedence('states', 1),
      optional($.states_options),
      '{',
      repeat($._states_body_item),
      '}',
    ),

    states_options: $ => seq(
      '(',
      commaSep1($.identifier),
      ')',
    ),

    _states_body_item: $ => choice(
      $.state_label,
      $.state_flow,
      $.state_line,
    ),

    // A state label followed by its body (state lines and flow control)
    // The body is captured to enable proper indentation queries
    state_label: $ => prec.right(seq(
      field('name', $.state_label_name),
      ':',
      field('body', optional($.state_body)),
    )),

    // The body of a state label - contains state lines and optionally ends with flow control
    state_body: $ => prec.right(repeat1(choice(
      $.state_flow,
      $.state_line,
    ))),

    state_label_name: $ => seq(
      $._state_label_segment,
      repeat(seq('.', $._state_label_segment)),
    ),

    state_line: $ => prec.right(choice(
      seq(
        field('sprite_frames', $._state_sprite_frames),
        field('duration', $._state_duration),
        optional($.state_modifiers),
        field('action', $.compound_statement),
      ),
      seq(
        field('sprite_frames', $._state_sprite_frames),
        field('duration', $._state_duration),
        optional($.state_modifiers),
        optional($.state_action_call),
        ';',
      ),
    )),

    _state_sprite_frames: $ => choice(
      $.state_sprite_frames,
      $.quoted_state_sprite_frames,
      $.mixed_quoted_state_sprite_frames,
    ),

    // Combined state sprite + frames as a SINGLE token
    // This prevents ambiguity with 4-letter state labels like "SHRL:"
    // because the entire "TROO A" or "TNT1 ABCD" is matched as one token.
    // If followed by ':', it won't match this pattern and will fall through to identifier.
    //
    // Pattern breakdown:
    // - ("[^"\\r\\n]{4}"|"[A-Za-z0-9_]{4}"|####|[A-Za-z0-9_]{4}) - sprite part
    // - [ \t]+ - required whitespace
    // - ("[^"\\r\\n]+"|[A-Za-z0-9\[\]\\#]+) - frame characters
    state_sprite_frames: _ => token(prec(1, seq(
      choice(
        /####/,
        // Exclude the exact unquoted state-flow spellings so `Goto Ready;`
        // and similar lines parse as flow control instead of sprite/frame pairs.
        /[A-EH-KM-RT-VX-Za-eh-km-rt-vx-z0-9_][A-Za-z0-9_]{3}/,
        /[Gg][^Oo][A-Za-z0-9_]{2}/,
        /[Gg][Oo][^Tt][A-Za-z0-9_]/,
        /[Gg][Oo][Tt][^Oo]/,
        /[Ss][^Tt][A-Za-z0-9_]{2}/,
        /[Ss][Tt][^Oo][A-Za-z0-9_]/,
        /[Ss][Tt][Oo][^Pp]/,
        /[Ww][^Aa][A-Za-z0-9_]{2}/,
        /[Ww][Aa][^Ii][A-Za-z0-9_]/,
        /[Ww][Aa][Ii][^Tt]/,
        /[Ff][^Aa][A-Za-z0-9_]{2}/,
        /[Ff][Aa][^Ii][A-Za-z0-9_]/,
        /[Ff][Aa][Ii][^Ll]/,
        /[Ll][^Oo][A-Za-z0-9_]{2}/,
        /[Ll][Oo][^Oo][A-Za-z0-9_]/,
        /[Ll][Oo][Oo][^Pp]/,
      ),
      /[ \t]+/,
      /[A-Za-z0-9\[\]\\#]+/,
    ))),

    _state_duration: $ => choice(
      $.number_literal,
      seq('-', $.number_literal),
      $.random_expression,
    ),

    state_modifiers: $ => repeat1($.state_modifier),

    state_modifier: $ => choice(
      keyword('bright'),
      keyword('fast'),
      keyword('slow'),
      keyword('ticadjust'),
      keyword('nodelay'),
      keyword('canraise'),
      seq(keyword('light'), '(', commaSep1($.string_literal), ')'),
      seq(keyword('offset'), '(', $.expression, ',', $.expression, ')'),
    ),

    state_flow: $ => choice(
      seq(keyword('loop'), ';'),
      seq(keyword('stop'), ';'),
      seq(keyword('wait'), ';'),
      seq(keyword('fail'), ';'),
      $.goto_state_flow,
    ),

    goto_state_flow: $ => prec(3, seq(
      // Require trailing horizontal whitespace so labels like `GotoDeath:`
      // are not mis-tokenized as a `goto` flow statement.
      alias(token(prec(2, /[Gg][Oo][Tt][Oo][ \t]+/)), 'goto'),
      field('target', $.state_goto_target),
      alias(token(seq(/[ \t]*/, ';')), ';'),
    )),

    state_goto_target: $ => prec.right(seq(
      optional(seq(field('class', $.state_goto_qualifier), '::')),
      $.dottable_name,
      optional(seq('+', $.number_literal)),
    )),

    state_goto_qualifier: $ => choice(
      $._type_identifier,
      alias(token(prec(-1, wordPattern('super'))), $.type_identifier),
    ),

    // =========================================================================
    // Function definition (outside class)
    // =========================================================================

    function_definition: $ => seq(
      optional($.member_modifiers),
      field('type', $._return_type),
      field('declarator', $.function_declarator),
      optional($.const_qualifier),
      field('body', $.compound_statement),
    ),

    // =========================================================================
    // Global declarations
    // =========================================================================

    primitive_type: _ => choice(
      ...SHADOWABLE_PRIMITIVE_TYPE_WORDS.map(word => token(prec(-1, wordPattern(word)))),
      token(prec(-1, wordPattern('statelabel'))),
      token(prec(-1, wordPattern('spriteid'))),
      token(prec(-1, wordPattern('textureid'))),
      token(prec(-1, wordPattern('voidptr'))),
      token(prec(-1, wordPattern('let'))),
    ),

    sized_type_specifier: $ => prec.right(seq(
      repeat1(choice(
        keyword('signed'),
        keyword('unsigned'),
        keyword('short'),
      )),
      optional($.primitive_type),
    )),

    class_type: $ => prec(-1, seq(
      keyword('class'),
      optional(seq('<', $._dottable_type_identifier, '>')),
    )),

    array_type: $ => seq(
      keyword('array'),
      '<',
      field('element', $.type_specifier),
      '>',
    ),

    map_type: $ => seq(
      keyword('map'),
      '<',
      field('key', $.type_specifier),
      ',',
      field('value', $.type_specifier),
      '>',
    ),

    mapiterator_type: $ => seq(
      keyword('mapiterator'),
      '<',
      field('key', $.type_specifier),
      ',',
      field('value', $.type_specifier),
      '>',
    ),

    function_type: $ => seq(
      keyword('function'),
      '<',
      choice(
        keyword('void'),
        seq(
          optional($.function_scope),
          $.type_specifier,
          repeat(seq(',', $.type_specifier)),
          '(',
          optional(commaSep($.function_type_parameter)),
          ')',
        ),
      ),
      '>',
    ),

    function_scope: _ => choice(
      keyword('ui'),
      keyword('play'),
      keyword('clearscope'),
    ),

    function_type_parameter: $ => seq(
      optional($.function_parameter_modifiers),
      $.type_specifier,
      optional('&'),
    ),

    function_parameter_modifiers: $ => repeat1(choice(
      keyword('in'),
      keyword('out'),
    )),

    // =========================================================================
    // Declarators
    // =========================================================================

    function_declarator: $ => prec(1, seq(
      field('declarator', $.declarator),
      field('parameters', $.parameter_list),
    )),

    init_declarator: $ => prec(1, seq(
      field('declarator', choice(
        $.identifier,
        $.array_declarator,
      )),
      '=',
      field('value', choice($.expression, $.initializer_list)),
    )),

    // =========================================================================
    // Parameter list
    // =========================================================================

    parameter_list: $ => seq(
      '(',
      optional(choice(
        keywordWithPrecedence('void', 1),
        commaSep($.parameter_declaration),
      )),
      ')',
    ),

    parameter_declaration: $ => choice(
      '...',
      seq(
        optional($.parameter_modifiers),
        field('type', $.type_specifier),
        optional('&'),
        field('declarator', $.identifier),
        optional(seq('=', field('default', $.expression))),
      ),
    ),

    compound_statement: $ => seq(
      '{',
      repeat($._block_item),
      '}',
    ),

    _block_item: $ => choice(
      alias($._local_declaration, $.declaration),
      $.statement,
      $.static_const_array,
    ),

    expression_statement: $ => seq(
      optional($.expression),
      ';',
    ),

    _assignment_left_expression: $ => choice(
      $.identifier,
      $.call_expression,
      $.field_expression,
      $.pointer_expression,
      $.subscript_expression,
      $.parenthesized_expression,
      $.array_pattern,
    ),

    // Array destructuring pattern: [a, b] = expr
    assignment_expression: $ => prec.right(PREC.ASSIGNMENT, seq(
      field('left', $._assignment_left_expression),
      field('operator', choice(
        '=',
        '*=',
        '/=',
        '%=',
        '+=',
        '-=',
        '<<=',
        '>>=',
        '>>>=',
        '&=',
        '^=',
        '|=',
      )),
      field('right', $.expression),
    )),

    call_expression: $ => prec(PREC.CALL, seq(
      field('function', $.expression),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq(
      '(',
      commaSep(choice(
        $.expression,
        $.named_argument,
      )),
      ')',
    ),

    named_argument: $ => seq(
      field('name', $.identifier),
      ':',
      field('value', $.expression),
    ),

    field_expression: $ => seq(
      prec(PREC.FIELD, seq(
        field('argument', $.expression),
        field('operator', '.'),
      )),
      field('field', $._field_identifier),
    ),

    super_expression: _ => keywordWithPrecedence('super', 1),

    // =========================================================================
    // Initializer list
    // =========================================================================

    string_literal: $ => seq(
      '"',
      repeat(choice(
        alias(token.immediate(prec(1, /[^\\"\n]+/)), $.string_content),
        $.escape_sequence,
      )),
      '"',
    ),
